// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders the component with no props and no a11y violations 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #EFEFEF;
  color: #2C3236;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
  border: none;
}

.c0 a {
  color: #2C3236 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #818F9B;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-info-circle fa-w-16 "
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: alert 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #FFDAD8;
  color: #940700;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
  border: none;
}

.c0 a {
  color: #940700 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #FF4539;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-minus-circle fa-w-16 "
      data-icon="minus-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zM124 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H124z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: info 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #EFEFEF;
  color: #2C3236;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
  border: none;
}

.c0 a {
  color: #2C3236 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #818F9B;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-info-circle fa-w-16 "
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #DDFDE5;
  color: #17592B;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
  border: none;
}

.c0 a {
  color: #17592B !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #3EBC64;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check-circle fa-w-16 "
      data-icon="check-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;

exports[`Alert renders with specific severity: warning 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 8px 12px 8px 12px;
  background: #FFECCE;
  color: #704300;
  font-size: 16px;
  line-height: 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  border-radius: 0px;
  border: none;
}

.c0 a {
  color: #704300 !important;
  font-size: 15px;
  line-height: 20px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-right: 8px;
  padding-top: 2px;
  font-size: 20px;
  color: #FF9F0A;
}

.c1 svg {
  display: block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation-circle fa-w-16 "
      data-icon="exclamation-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class=""
  >
    Alert Content
  </div>
</div>
`;
